# YOLOV8_TensorRT_CPP

./: CMakeLists.txt  README.md  package.xml
config/: test.yaml
libs/tensorrt-cpp-api/: CMakeLists.txt
src/: rosNode.cpp  rosNode.hpp  yolov8.cpp
